force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Allocation code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>