force-app/main/default/objects/Allocation__c/fields/AllocatedProject__c.field-meta.xml
<CustomField>
    <fullName>AllocatedProject__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Project employee allocations.</description>
    <inlineHelpText>Project employee allocations.</inlineHelpText>
    <label>Allocated Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>