force-app/main/default/objects/Allocation__c/fields/AllocationForm__c.field-meta.xml
<CustomField>
    <fullName>AllocationForm__c</fullName>
    <description>When increasing the load, use this field to activate check-on in the Allocated__c field</description>
    <inlineHelpText>When increasing the load, use this field to activate check-on in the Allocated__c field</inlineHelpText>
    <label>Allocation form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>