force-app/main/default/objects/Allocation__c/fields/BillingCategory__c.field-meta.xml
<CustomField>
    <fullName>BillingCategory__c</fullName>
    <description>Billing Category to which the Allocation belongs.</description>
    <inlineHelpText>Billing Category to which the Allocation belongs.</inlineHelpText>
    <label>Billing Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Not Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>