force-app/main/default/objects/Allocation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Identification of the Employee linked to this Allocation.</description>
    <inlineHelpText>Identification of the Employee linked to this Allocation.</inlineHelpText>
    <label>Professional</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Alocations (Funcionário)</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>