force-app/main/default/objects/Allocation__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Code used in Billing defines the cost/investment of a project.</description>
    <formula>Project__r.Engagement__c</formula>
    <inlineHelpText>Code used in Billing defines the cost/investment of a project.</inlineHelpText>
    <label>Engagement</label>
    <type>Text</type>
</CustomField>