force-app/main/default/objects/Allocation__c/fields/LabelPicklist__c.field-meta.xml
<CustomField>
    <fullName>LabelPicklist__c</fullName>
    <formula>Employee__r.Name</formula>
    <label>LabelPicklist</label>
    <type>Text</type>
</CustomField>