force-app/main/default/objects/Allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Identification of the Project in which the Employee is allocated.</description>
    <inlineHelpText>Identification of the Project in which the Employee is allocated.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Alocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>