force-app/main/default/objects/Allocation__c/fields/ProjectCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ProjectCostCenter__c</fullName>
    <description>The content present in the Cost Center field is present in the Project linked to Allocation.</description>
    <formula>TEXT ( Project__r.CostCenter__c )</formula>
    <inlineHelpText>The content present in the Cost Center field is present in the Project linked to Allocation.</inlineHelpText>
    <label>Project Cost Center</label>
    <type>Text</type>
</CustomField>