force-app/main/default/objects/Allocation__c/fields/Responsability__c.field-meta.xml
<CustomField>
    <fullName>Responsability__c</fullName>
    <description>The responsibility rests with someone who holds the chosen position.</description>
    <inlineHelpText>The responsibility rests with someone who holds the chosen position.</inlineHelpText>
    <label>Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Analyst 1</fullName>
            </value>
            <value>
                <fullName>Business Analyst 2</fullName>
            </value>
            <value>
                <fullName>Full System Analyst 1</fullName>
            </value>
            <value>
                <fullName>Full System Analyst 2</fullName>
            </value>
            <value>
                <fullName>System analyst</fullName>
            </value>
            <value>
                <fullName>System analyst 2</fullName>
            </value>
            <value>
                <fullName>Senior System Analyst</fullName>
            </value>
            <value>
                <fullName>Functional analyst</fullName>
                <default>true</default>
                <label>Functional analyst</label>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Consultant 1</fullName>
            </value>
            <value>
                <fullName>Consultant 2</fullName>
            </value>
            <value>
                <fullName>Salesforce Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce/Vlocity Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Consultant 2</fullName>
            </value>
            <value>
                <fullName>Senior Consultant 1</fullName>
            </value>
            <value>
                <fullName>Senior Consultant 2</fullName>
            </value>
            <value>
                <fullName>Vlocity Consultant</fullName>
            </value>
            <value>
                <fullName>Systems Coordinator 1</fullName>
            </value>
            <value>
                <fullName>Systems Coordinator 2</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Salesforce Specialist</fullName>
            </value>
            <value>
                <fullName>Vlocity Specialist</fullName>
            </value>
            <value>
                <fullName>Manager 1</fullName>
            </value>
            <value>
                <fullName>Manager 2</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Senior Manager 1</fullName>
            </value>
            <value>
                <fullName>Senior Manager 2</fullName>
            </value>
            <value>
                <fullName>Shared Services Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>