force-app/main/default/objects/Allocation__c/fields/ResponsibleManager__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Manager Code.</description>
    <inlineHelpText>Project Manager Code.</inlineHelpText>
    <label>Responsible Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Alocations (Responsible Manager)</relationshipLabel>
    <relationshipName>Alocations</relationshipName>
    <type>Lookup</type>
</CustomField>