force-app/main/default/objects/Allocation__c/fields/StatusAfterAllocation__c.field-meta.xml
<CustomField>
    <fullName>StatusAfterAllocation__c</fullName>
    <description>Describe what the employee&apos;s status will be after the current allocation.</description>
    <inlineHelpText>Describe what the employee&apos;s status will be after the current allocation.</inlineHelpText>
    <label>Status after Allocation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>