force-app/main/default/objects/Allocation__c/fields/StatusAllocation__c.field-meta.xml
<CustomField>
    <fullName>StatusAllocation__c</fullName>
    <description>Describes which allocation state an employee is in.</description>
    <inlineHelpText>Describes which allocation state an employee is in.</inlineHelpText>
    <label>Status allocation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>