force-app/main/default/objects/Allocation__c/fields/TestAllocated__c.field-meta.xml
<CustomField>
    <fullName>TestAllocated__c</fullName>
    <description>The number of days the employee will be allocated.</description>
    <formula>IF (((ISBLANK(EndDate__c)) || (EndDate__c &gt; TODAY()) &amp;&amp; StartDate__c &lt;= TODAY()) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days the employee will be allocated.</inlineHelpText>
    <label>Test Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>