force-app/main/default/objects/Allocation__c/fields/TimeAllocation__c.field-meta.xml
<CustomField>
    <fullName>TimeAllocation__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Time Allocation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>