force-app/main/default/objects/Allocation__c/fields/Workload__c.field-meta.xml
<CustomField>
    <fullName>Workload__c</fullName>
    <description>Represents the employee&apos;s workload in this Allocation.</description>
    <inlineHelpText>Represents the employee&apos;s workload in this Allocation.</inlineHelpText>
    <label>Workload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time</fullName>
                <default>true</default>
                <label>Full-Time</label>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>