force-app/main/default/objects/Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Data_De_Inicio__c</columns>
    <columns>Alocado_test__c</columns>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Responsability__c</columns>
    <columns>Project__c</columns>
    <columns>Data_de_Termino__c</columns>
    <columns>Carga_Horaria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>